--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
                     <div class="d-flex justify-content-center mt-auto mb-3">
                         <a class="btn btn-secondary btn-square mx-1" href="https://twitter.com/dodomiyake1"
                             target="_blank"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-secondary btn-square mx-1" href="https://github.com/dodomiyake" target="_blank"><i class="fab fa-github"></i></a>
+                        <a class="btn btn-secondary btn-square mx-1" href="https://github.com/dodomiyake"
+                            target="_blank"><i class="fab fa-github"></i></a>
                         <a class="btn btn-secondary btn-square mx-1"
                             href="https://www.linkedin.com/in/oluwadamilolaxajayi/" target="_blank"><i
                                 class="fab fa-linkedin-in"></i></a>
@@ -66,7 +67,7 @@
                             target="_blank"><i class="fab fa-instagram"></i></a>
                     </div>
                     <div class="d-flex align-items-end justify-content-between border-top">
-                        <a href="../Oluwadamilola Ajayi Portfolio/img/resume.pdf" download="OluwadamilolaAjayis-Resume"
+                        <a href="img/resume.pdf" download="OluwadamilolaAjayis-Resume"
                             target="_blank" class="btn w-50 border-end">Download CV</a>
                         <a href="mailto: oluwadamilola.william@gmail.com" class="btn w-50 btn-scroll">Contact Me</a>
                     </div>
@@ -97,7 +98,7 @@
                             <span class="fw-medium text-primary">Phone:</span> +234 803 8755956
                         </div>
                         <div class="col-sm-6 py-1">
-                            <span class="fw-medium text-primary">Email:</span> oluwadamilola.oma@gmail.com
+                            <span class="fw-medium text-primary">Email:</span> oluwadamilola.william@gmail.com
                         </div>
                         <div class="col-sm-6 py-1">
                             <span class="fw-medium text-primary">Freelance:</span> Available
@@ -217,9 +218,10 @@
                             <h5 class="mb-1">Software Engineer</h5>
                             <p class="mb-2">100Devs | <small>Jan 2022 - Present</small></p>
                             <p><span>●</span> Developing innovative solutions.</p>
-                            <p><span>●</span> 	Collaborated with a team of developers to build modern and responsive web applications &nbsp;  using best practices.</p>
-                            <p> <span>●</span> 	Built semantically structured full stack web applications</p>
-                            <p> <span>●</span>	Applied agile methodologies like SCRUM for project management.</p>
+                            <p><span>●</span> Collaborated with a team of developers to build modern and responsive web
+                                applications &nbsp; using best practices.</p>
+                            <p> <span>●</span> Built semantically structured full stack web applications</p>
+                            <p> <span>●</span> Applied agile methodologies like SCRUM for project management.</p>
                         </div>
                         <div class="position-relative mb-4">
                             <span class="bi bi-arrow-right fs-4 text-light position-absolute"
@@ -237,7 +239,8 @@
                             <h5 class="mb-1">Deputy Manager - Operations</h5>
                             <p class="mb-2">VFS Global | <small>2013 - 2022</small></p>
                             <p><span>●</span> Manage all day to day activities (administrative and functional).</p>
-                            <p><span>●</span> Conduct regular Audits for all processes & implement all new process rollout or changes.</p>
+                            <p><span>●</span> Conduct regular Audits for all processes & implement all new process
+                                rollout or changes.</p>
                         </div>
                         <div class="position-relative mb-4">
                             <span class="bi bi-arrow-right fs-4 text-light position-absolute"
@@ -457,7 +460,8 @@
                         <div class="d-flex justify-content-center mb-4">
                             <a class="btn btn-dark btn-square mx-1" href="https://twitter.com/dodomiyake1"
                                 target="_blank"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-square mx-1" href="https://github.com/dodomiyake" target="_blank"><i class="fab fa-github"></i></a>
+                            <a class="btn btn-dark btn-square mx-1" href="https://github.com/dodomiyake"
+                                target="_blank"><i class="fab fa-github"></i></a>
                             <a class="btn btn-dark btn-square mx-1"
                                 href="https://www.linkedin.com/in/oluwadamilolaxajayi/" target="_blank"><i
                                     class="fab fa-linkedin-in"></i></a>
